# scripture-to-slides

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
docs/: BACKLOG.md  RELEASE.md  WORKFLOW.md
esv_slides/: __init__.py  cli.py  config.py  esv_api.py  pdf_generator.py  utils.py
scripture_slides/: __init__.py  cli.py  config.py  esv_api.py  pdf_generator.py  utils.py
tests/: __init__.py  test_cli.py  test_config.py  test_esv_api.py  test_pdf_generator.py  test_utils.py
